--- a/superHeros/src/main/resources/templates/home.html
+++ b/superHeros/src/main/resources/templates/home.html
@@ -10,8 +10,8 @@
 <body>
 <div>
     <h1>Home</h1>
-    <a href="#" class="btn btn-secondary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Enregistrer un héros</a>
-    <a href="#" class="btn btn-secondary btn-lg disabled" tabindex="-1" role="button" aria-disabled="true">Signaler un incident</a>
+    <a th:href="@{/save}" class="btn btn-secondary btn-lg " tabindex="-1" role="button" aria-disabled="true">Enregistrer un héros</a>
+    <a th:href="@{/incidents}"class="btn btn-secondary btn-lg " tabindex="-1" role="button" aria-disabled="true">Signaler un incident</a>
 
 </div>
 </body>
