correction code et commentaires

--- a/superHeros/src/main/resources/templates/incident/index.html
+++ b/superHeros/src/main/resources/templates/incident/index.html
@@ -47,16 +47,16 @@
 
     <div>
         <button onclick="showHeros()" type="submit">Valider</button>
-
         <!--    affichage de la carte-->
         <div id="map">
 
         </div>
         <script th:inline="javascript">
+
             function showHeros(){
                 //Recuperer les valeurs saisies par l'utilisateur
                 var num = document.getElementById("num").value;
-                //enlever les espace si l'utilisateur en a mis, en fin et debut de saisie
+                //enlever les espace en fin et debut de saisie
                 num = num.trim();
                 var rue = document.getElementById("rue").value;
                 rue = rue.trim();
@@ -68,7 +68,7 @@
                 var code = document.getElementById("code").value;
                 code = code.trim();
 
-                // Reccuperer les informations de l'api
+                // Reccuperer les informations de l'API(adresse vers coordonnées gps)
                 fetch('https://nominatim.openstreetmap.org/search?q='+num+'%20'+rue+'%20'+code+'%20'+ville+'&format=json')
                     .then(result => result.json())
                     .then((output) => {
@@ -80,14 +80,14 @@
 
                 //initialisation de la map avec les positions de ville données par l'utilisateur
 
-                var macarte = null;
+                var carte = null;
                 // Fonction d'initialisation de la carte
                 function initMap(lon,lat,ville) {
-                    // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
-                    macarte = L.map('map').setView([lat, lon], 8);
+
+                    carte = L.map('map').setView([lat, lon], 8);
                     //Ajouter un marqueur sur la ville
-                    var markerVille = L.marker([lat, lon]).addTo(macarte);
-                    markerVille.bindPopup("<h1>"+ville+"</h1>");
+                    var markerVille = L.marker([lat, lon]).addTo(carte);
+                    markerVille.bindPopup("<h1>" + ville + "</h1>");
 
                     //mettre un cercle entourant les 50km(50000 metres) de distance autour de l'adresse données
                     let cercle = L.circle([lat, lon], {
@@ -95,42 +95,21 @@
                         fillColor: 'green',
                         fillOpacity: 0.5,
                         radius: 50000
-                    }).addTo(macarte);
-                    // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
+                    }).addTo(carte);
+                    // récupération carte openstreetmap avec leaflet
                     L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
-                        // Il est toujours bien de laisser le lien vers la source des données
+
                         attribution: 'données © <a href="//osm.org/copyright">OpenStreetMap</a>/ODbL - rendu <a href="//openstreetmap.fr">OSM France</a>',
                         minZoom: 1,
                         maxZoom: 20
-                    }).addTo(macarte);
-
-                    //Ajouter les heros à la carte
-                    var heros= [[${heros}]];
-
-                    var i =0;
-                     var e = 0;
-                     while (i<heros.length)
-
-                     {
-                         var herospos = heros[i].location;
-                         var positions = herospos.split(",");
-                         var markerHeros = L.marker([positions[0], positions[1]]).addTo(macarte);
-                         markerHeros.bindPopup("<h1>"+heros[i].name+"</h1><p>"+heros[i].phone+"</p>");
-                         i=i+1;
-                         /*var incidents = [[${heros.incidents}]];
-                         while (e<heros.length){
-                             console.log(incidents[e]);
-                             e=e+1
-                         };*/
-                     };
-
-
+                    }).addTo(carte);
 
                 };
                 window.onload = function(){
-                    // Fonction d'initialisation
+                    
                     initMap();
                 };
+
 
             };
         </script>
