--- a/superHeros/src/main/resources/templates/superHeros/save.html
+++ b/superHeros/src/main/resources/templates/superHeros/save.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- cdn bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 <body>
 <div>
     <h1>Ajouter un heros</h1>
-    <form method="post" th:action="@{/SuperHeros/submitForm}" >
+    <form id="form" method="post" th:action="@{/SuperHeros/submitForm}" >
         <div>
             <label>
                 name :
@@ -40,8 +43,36 @@
         </p>
 
         <div>
-            <button type="submit">Valider</button>
+            <button type="button" onclick="CheckBox()">Valider</button>
     </form>
 </div>
+<script>
+
+    function CheckBox()
+    {
+        var input = document.getElementsByTagName("input");
+        var i, n;
+        var c, msg;
+
+        n = input.length;
+        c = 0;
+
+        msg = "( -"
+        for (i=0; i<n; i++)
+        {
+            if (input[i].type.toLowerCase()=="checkbox")
+            {
+                if (input[i].checked)
+                {
+                    c++;
+
+                }
+            }
+        }
+console.log(c);
+        if (c == 4){
+        alert("Vous ne pouvez cocher que trois incidents maximun");}else if(c == 0 ){alert("Vous devez cocher au moins un incident");}else{document.getElementById('form').submit();}
+    }
+</script>
 </body>
 </html>
