--- a/superHeros/src/main/resources/templates/superHeros/save.html
+++ b/superHeros/src/main/resources/templates/superHeros/save.html
@@ -6,46 +6,46 @@
     <!-- cdn bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
-<div>
-    <h1>Ajouter un heros</h1>
-    <form id="form" method="post" th:action="@{/SuperHeros/submitForm}" >
-        <div>
-            <label>
-                name :
-            </label>
-            <input th:field="*{heros.name}" required="true">
-        </div>
-        <div>
-            <label>
-                phone :
-            </label>
-            <input th:field="*{heros.phone}" required="true">
-        </div>
-        <div>
-            <label>
-                location :
-            </label>
-            <input th:field="*{heros.location}" required="true">
-        </div>
 
-        <p>
-            <label>Incidents:
+<form id="form" method="post" th:action="@{/SuperHeros/submitForm}" >
+    <h1>Ajouter un héros</h1>
+    <label>
+        <p class="label-txt">Nom du héros</p>
+        <input th:field="*{heros.name}" type="text" class="input">
+        <div class="line-box">
+            <div class="line"></div>
+        </div>
+    </label>
+    <label>
+        <p class="label-txt">Numéro de téléphone</p>
+        <input th:field="*{heros.phone}" type="text" class="input">
+        <div class="line-box">
+            <div class="line"></div>
+        </div>
+    </label>
+    <label>
+        <p class="label-txt">Localisation</p>
+        <input th:field="*{heros.location}" type="text" class="input">
+        <div class="line-box">
+            <div class="line"></div>
+        </div>
+    </label>
 
-                <input type="checkbox" name="incidents"
-                       th:each="incident : ${incidents}"
-                       th:text="${incident.name}"
-                       th:value="${incident.id}"
-                     th:field="*{heros.incidents}"
-                />
-            </label>
-        </p>
+    <label><p class="label-txt" id="labelIncident">Incidents:</p>
+        <div class="inputIncident">
+        <input class="incidents" type="checkbox" name="incidents"
+               th:each="incident : ${incidents}"
+               th:text="${incident.name}"
+               th:value="${incident.id}"
+               th:field="*{heros.incidents}"
+        />
 
-        <div>
-            <button type="button" onclick="CheckBox()">Valider</button>
-    </form>
-</div>
+    </div>
+    <button onclick="CheckBox()" type="button">Valider</button>
+</form>
 <script>
 
     function CheckBox()
