css declaration d'incidents

--- a/superHeros/src/main/resources/static/CSS/style.css
+++ b/superHeros/src/main/resources/static/CSS/style.css
@@ -12,6 +12,15 @@ form {
     -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.1);
     box-shadow: 2px 2px 3px rgba(0,0,0,0.1);
 }
+#form {
+    width: 60%;
+    margin: 60px auto;
+    background: #efefef;
+    padding: 60px 120px 80px 120px;
+    text-align: center;
+    -webkit-box-shadow: 2px 2px 3px rgba(0,0,0,0.1);
+    box-shadow: 2px 2px 3px rgba(0,0,0,0.1);
+}
 label {
     display: block;
     position: relative;
@@ -84,4 +93,10 @@ button:hover {
 
 .inputIncident{
     margin-bottom:5%;
+}
+#map{
+    height:400px;
+}
+#valider{
+    margin-top:5%;
 }
