--- a/superHeros/src/main/resources/static/CSS/style.css
+++ b/superHeros/src/main/resources/static/CSS/style.css
@@ -100,3 +100,16 @@ button:hover {
 #valider{
     margin-top:5%;
 }
+
+#button {
+    display: inline-block;
+    padding: 12px 24px;
+    background: rgb(220,220,220);
+    font-weight: bold;
+    color: rgb(120,120,120);
+    border: none;
+    outline: none;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: ease .3s;
+}
