--- a/superHeros/src/main/resources/templates/home.html
+++ b/superHeros/src/main/resources/templates/home.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello from spring application</title>
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </head>
 <body>
-<div>
-    <h1>Home</h1>
-    <a th:href="@{/save}" class="btn btn-secondary btn-lg " tabindex="-1" role="button" aria-disabled="true">Enregistrer un héros</a>
-    <a th:href="@{/incidents}"class="btn btn-secondary btn-lg " tabindex="-1" role="button" aria-disabled="true">Signaler un incident</a>
+<style>body {
+    background: #A8BEBC;
+}
 
+</style>
+<div>
+    <div id="form">
+    <h1 style="margin-bottom: 10%;">Accueil super-héros</h1>
+    <a id="button" th:href="@{/save}" class="btn btn-secondary btn-lg " tabindex="-1" role="button" aria-disabled="true">Enregistrer un héros</a>
+    <a id="button" th:href="@{/incidents}"class="btn btn-secondary btn-lg " tabindex="-1" role="button" aria-disabled="true">Signaler un incident</a>
+    </div>
 </div>
 </body>
 </html>
